Matched presented features selected

--- a/src/ml/image_processing_training_nb.ipynb
+++ b/src/ml/image_processing_training_nb.ipynb
@@ -744,8 +744,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Prepare the data\n",
-        "X = df[['area', 'width', 'circularity', 'ellipticity', 'aspect ratio', 'form factor', 'perimeter', 'perimeter ratio of diameter', 'perimeter Ratio of Physiological Length and Physiological Width']]\n",
+        "# Prepare the data 2\n",
+        "X = df[['area', 'circularity', 'ellipticity', 'form factor', 'perimeter', 'perimeter ratio of diameter', 'perimeter Ratio of Physiological Length and Physiological Width']]\n",
         "y = df['Species']\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
       ]
@@ -759,10 +759,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "File ../../csv/train_test/X_train_features.csv already exists. Skipping.\n",
-            "File ../../csv/train_test/X_test_features.csv already exists. Skipping.\n",
-            "File ../../csv/train_test/y_train_features.csv already exists. Skipping.\n",
-            "File ../../csv/train_test/y_test_features.csv already exists. Skipping.\n"
+            "File ../../csv/train_test/X_train_features.csv saved successfully.\n",
+            "File ../../csv/train_test/X_test_features.csv saved successfully.\n",
+            "File ../../csv/train_test/y_train_features.csv saved successfully.\n",
+            "File ../../csv/train_test/y_test_features.csv saved successfully.\n"
           ]
         }
       ],
@@ -807,7 +807,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -820,9 +820,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Accuracy: 0.6563517915309446\n",
-            "Precision: 0.6524107160826922\n",
-            "Recall: 0.6563517915309446\n"
+            "Accuracy: 0.6351791530944625\n",
+            "Precision: 0.623010282528313\n",
+            "Recall: 0.6351791530944625\n"
           ]
         }
       ],
@@ -840,7 +840,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -849,7 +849,7 @@
               "['../../models/X_standard_scaler.pkl']"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -866,16 +866,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Accuracy: 0.6563517915309446\n",
-            "Precision: 0.6524107160826922\n",
-            "Recall: 0.6563517915309446\n"
+            "Accuracy: 0.6351791530944625\n",
+            "Precision: 0.623010282528313\n",
+            "Recall: 0.6351791530944625\n"
           ]
         }
       ],
@@ -895,7 +895,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 11,
       "metadata": {
         "id": "GySG0oT2WCtA"
       },
@@ -904,7 +904,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Predicted Class Labels:  [3.]\n"
+            "Predicted Class Labels:  [0.]\n"
           ]
         },
         {
@@ -920,7 +920,7 @@
       ],
       "source": [
         "X_standard_scaler = joblib.load('../../models/X_standard_scaler.pkl')\n",
-        "new_scaled_data = X_standard_scaler.transform(np.array([[70748.5,305.0,0.5519020363926462,1.908372278751408,1.2459016393442623,0.5519020363926462,1269.207272648811,3.067476552718655,1.8528573323340312]]))\n",
+        "new_scaled_data = X_standard_scaler.transform(np.array([[70748.5,0.5519020363926462,1.908372278751408,0.5519020363926462,1269.207272648811,3.067476552718655,1.8528573323340312]]))\n",
         "\n",
         "# Make predictions\n",
         "predictions = nb.predict(new_scaled_data)\n",
