--- a/src/ml/image_processing_training_rf.ipynb
+++ b/src/ml/image_processing_training_rf.ipynb
@@ -92,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -454,7 +454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -768,7 +768,7 @@
               "[3068 rows x 15 columns]"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -780,19 +780,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Prepare the data\n",
-        "X = df[['area', 'width', 'circularity', 'ellipticity', 'aspect ratio', 'form factor', 'perimeter', 'perimeter ratio of diameter', 'perimeter Ratio of Physiological Length and Physiological Width']]\n",
+        "# Prepare the data 2\n",
+        "X = df[['area', 'circularity', 'ellipticity', 'form factor', 'perimeter', 'perimeter ratio of diameter', 'perimeter Ratio of Physiological Length and Physiological Width']]\n",
         "y = df['Species']\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -847,18 +847,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Best Parameters:  {'max_depth': 20, 'max_features': 'log2', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 100}\n",
-            "Best Accuracy:  0.9669911467642047\n",
-            "Accuracy: 0.9739413680781759\n",
-            "Precision: 0.9741779338409475\n",
-            "Recall: 0.9739413680781759\n"
+            "Best Parameters:  {'max_depth': None, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 100}\n",
+            "Best Accuracy:  0.9682123114011387\n",
+            "Accuracy: 0.9755700325732899\n",
+            "Precision: 0.9755635704528738\n",
+            "Recall: 0.9755700325732899\n"
           ]
         }
       ],
@@ -876,7 +876,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -885,7 +885,7 @@
               "['../../models/X_standard_scaler.pkl']"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -902,16 +902,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Accuracy: 0.9739413680781759\n",
-            "Precision: 0.9741779338409475\n",
-            "Recall: 0.9739413680781759\n"
+            "Accuracy: 0.9755700325732899\n",
+            "Precision: 0.9755635704528738\n",
+            "Recall: 0.9755700325732899\n"
           ]
         }
       ],
@@ -938,7 +938,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -961,7 +961,7 @@
       ],
       "source": [
         "X_standard_scaler = joblib.load('../../models/X_standard_scaler.pkl')\n",
-        "new_scaled_data = X_standard_scaler.transform(np.array([[70748.5,305.0,0.5519020363926462,1.908372278751408,1.2459016393442623,0.5519020363926462,1269.207272648811,3.067476552718655,1.8528573323340312]]))\n",
+        "new_scaled_data = X_standard_scaler.transform(np.array([[70748.5,0.5519020363926462,1.908372278751408,0.5519020363926462,1269.207272648811,3.067476552718655,1.8528573323340312]]))\n",
         "\n",
         "# Make predictions\n",
         "predictions = rf.predict(new_scaled_data)\n",
