--- a/src/ml/image_processing_training_svm.ipynb
+++ b/src/ml/image_processing_training_svm.ipynb
@@ -2,11 +2,19 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 1,
       "metadata": {
         "id": "rxhHWBO7wRW6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "<frozen importlib._bootstrap>:219: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split, GridSearchCV\n",
@@ -18,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 2,
       "metadata": {
         "id": "pVVCR90tbN_v"
       },
@@ -89,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -115,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -429,7 +437,7 @@
               "[4178 rows x 15 columns]"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -442,7 +450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -756,7 +764,7 @@
               "[3068 rows x 15 columns]"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -768,19 +776,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Prepare the data\n",
-        "X = df[['area', 'width', 'circularity', 'ellipticity', 'aspect ratio', 'form factor', 'perimeter', 'perimeter ratio of diameter', 'perimeter Ratio of Physiological Length and Physiological Width']]\n",
+        "# Prepare the data 2\n",
+        "X = df[['area', 'circularity', 'ellipticity', 'form factor', 'perimeter', 'perimeter ratio of diameter', 'perimeter Ratio of Physiological Length and Physiological Width']]\n",
         "y = df['Species']\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -835,7 +843,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -849,10 +857,10 @@
           "output_type": "stream",
           "text": [
             "Best Hyperparameters:  {'C': 51, 'degree': 2, 'gamma': 0.001, 'kernel': 'rbf'}\n",
-            "Best Accuracy:  0.894867617107943\n",
-            "Accuracy: 0.9136807817589576\n",
-            "Precision: 0.9152903421141504\n",
-            "Recall: 0.9136807817589576\n"
+            "Best Accuracy:  0.8826443326821563\n",
+            "Accuracy: 0.8843648208469055\n",
+            "Precision: 0.8856360696342123\n",
+            "Recall: 0.8843648208469055\n"
           ]
         }
       ],
@@ -872,7 +880,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -881,7 +889,7 @@
               "['../../models/X_standard_scaler.pkl']"
             ]
           },
-          "execution_count": 31,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -898,16 +906,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Accuracy: 0.9136807817589576\n",
-            "Precision: 0.9152903421141504\n",
-            "Recall: 0.9136807817589576\n"
+            "Accuracy: 0.8843648208469055\n",
+            "Precision: 0.8856360696342123\n",
+            "Recall: 0.8843648208469055\n"
           ]
         }
       ],
@@ -935,7 +943,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 11,
       "metadata": {
         "id": "GySG0oT2WCtA"
       },
@@ -960,13 +968,20 @@
       ],
       "source": [
         "X_standard_scaler = joblib.load('../../models/X_standard_scaler.pkl')\n",
-        "new_scaled_data = X_standard_scaler.transform(np.array([[70748.5,305.0,0.5519020363926462,1.908372278751408,1.2459016393442623,0.5519020363926462,1269.207272648811,3.067476552718655,1.8528573323340312]]))\n",
+        "new_scaled_data = X_standard_scaler.transform(np.array([[70748.5,0.5519020363926462,1.908372278751408,0.5519020363926462,1269.207272648811,3.067476552718655,1.8528573323340312]]))\n",
         "\n",
         "# Make predictions\n",
         "predictions = best_svm.predict(new_scaled_data)\n",
         "# Print the predicted class labels\n",
         "print(\"Predicted Class Labels: \", predictions)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
