--- a/src/IE_PlantCV.ipynb
+++ b/src/IE_PlantCV.ipynb
@@ -24,8 +24,8 @@
     "\n",
     "class options:\n",
     "    def __init__(self):\n",
-    "        #self.image = '../../leafsnap/leafsnap-dataset/dataset/images/field/catalpa_bignonioides/13001269151465.jpg'\n",
-    "        self.image = '../images/raws/ulmus_pumila/1258770451_0000.jpg'\n",
+    "        #self.image = '../../leafsnap/leafsnap-dataset/dataset/images/field/acer_rubrum/13001155906945.jpg'\n",
+    "        self.image = '../images/raws/acer_rubrum/13001155906945.jpg'\n",
     "        self.debug = \"plot\"\n",
     "        self.writeimg= False \n",
     "        self.result = \"features_metadata.json\"\n",
@@ -454,7 +454,7 @@
     "import scipy.integrate\n",
     "\n",
     "# https://www.delftstack.com/howto/numpy/curvature-formula-numpy/\n",
-    "def compute_curvature(x, y):\n",
+    "def compute_curvature(x, y): # get circle first // radius points inside \n",
     "    dx_dt = np.gradient(x)\n",
     "    dy_dt = np.gradient(y)\n",
     "    d2x_dt2 = np.gradient(dx_dt)\n",
