pushed updates on training

--- a/src/IE_PlantCV.ipynb
+++ b/src/IE_PlantCV.ipynb
@@ -612,6 +612,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Channel gray is not h, s or v!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32md:\\University\\4-2\\Thesis\\Plantaea_Image_Processing\\src\\IE_PlantCV.ipynb Cell 5\u001b[0m in \u001b[0;36m8\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/University/4-2/Thesis/Plantaea_Image_Processing/src/IE_PlantCV.ipynb#X11sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m img, path, filename \u001b[39m=\u001b[39m pcv\u001b[39m.\u001b[39mreadimage(filename\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m../../leafsnap/leafsnap-dataset/dataset/segmented/field/acer_saccharinum/13001158000696.png\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/University/4-2/Thesis/Plantaea_Image_Processing/src/IE_PlantCV.ipynb#X11sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# Convert the image to grayscale\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/University/4-2/Thesis/Plantaea_Image_Processing/src/IE_PlantCV.ipynb#X11sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m gray_image \u001b[39m=\u001b[39m pcv\u001b[39m.\u001b[39;49mrgb2gray_hsv(img, \u001b[39m'\u001b[39;49m\u001b[39mgray\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/University/4-2/Thesis/Plantaea_Image_Processing/src/IE_PlantCV.ipynb#X11sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# Create a binary image using a threshold\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/University/4-2/Thesis/Plantaea_Image_Processing/src/IE_PlantCV.ipynb#X11sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m binary_image \u001b[39m=\u001b[39m pcv\u001b[39m.\u001b[39mthreshold\u001b[39m.\u001b[39mbinary(gray_image, threshold\u001b[39m=\u001b[39m\u001b[39m120\u001b[39m, max_value\u001b[39m=\u001b[39m\u001b[39m255\u001b[39m, object_type\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mdark\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[1;32md:\\anaconda3\\envs\\Plant\\lib\\site-packages\\plantcv\\plantcv\\rgb2gray_hsv.py:29\u001b[0m, in \u001b[0;36mrgb2gray_hsv\u001b[1;34m(rgb_img, channel)\u001b[0m\n\u001b[0;32m     27\u001b[0m channel \u001b[39m=\u001b[39m channel\u001b[39m.\u001b[39mlower()\n\u001b[0;32m     28\u001b[0m \u001b[39mif\u001b[39;00m channel \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m names:\n\u001b[1;32m---> 29\u001b[0m     fatal_error(\u001b[39m\"\u001b[39;49m\u001b[39mChannel \u001b[39;49m\u001b[39m\"\u001b[39;49m \u001b[39m+\u001b[39;49m \u001b[39mstr\u001b[39;49m(channel) \u001b[39m+\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39m is not h, s or v!\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m     31\u001b[0m \u001b[39m# Convert the input BGR image to HSV colorspace\u001b[39;00m\n\u001b[0;32m     32\u001b[0m hsv \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mcvtColor(rgb_img, cv2\u001b[39m.\u001b[39mCOLOR_BGR2HSV)\n",
+      "File \u001b[1;32md:\\anaconda3\\envs\\Plant\\lib\\site-packages\\plantcv\\plantcv\\fatal_error.py:13\u001b[0m, in \u001b[0;36mfatal_error\u001b[1;34m(error)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfatal_error\u001b[39m(error):\n\u001b[0;32m      5\u001b[0m     \u001b[39m\"\"\"Print out the error message that gets passed, then quit the program.\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \n\u001b[0;32m      7\u001b[0m \u001b[39m    Inputs:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[39m    :return:\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(error)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Channel gray is not h, s or v!"
+     ]
+    }
+   ],
+   "source": [
+    "from plantcv import plantcv as pcv \n",
+    "import numpy as np\n",
+    "\n",
+    "# Load the leaf image from the list\n",
+    "img, path, filename = pcv.readimage(filename=\"../../leafsnap/leafsnap-dataset/dataset/segmented/field/acer_saccharinum/13001158000696.png\")\n",
+    "\n",
+    "# Convert the image to grayscale\n",
+    "gray_image = pcv.rgb2gray_hsv(img, 'gray')\n",
+    "\n",
+    "# Create a binary image using a threshold\n",
+    "binary_image = pcv.threshold.binary(gray_image, threshold=120, max_value=255, object_type='dark')\n",
+    "\n",
+    "# Find contours in the binary image\n",
+    "contours, hierarchy = pcv.find_objects(binary_image, gray_image)\n",
+    "\n",
+    "# Print the number of contours found\n",
+    "print('Number of contours found:', len(contours))\n",
+    "\n",
+    "# Draw the contours on the original image\n",
+    "pcv.draw_contour(leaf_image, contours)\n",
+    "\n",
+    "# Display the final image\n",
+    "pcv.visualize.colorize_components(leaf_image, contours)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [
