--- a/src/ml/image_processing_training_rf.ipynb
+++ b/src/ml/image_processing_training_rf.ipynb
@@ -96,6 +96,46 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "def set_optimal_perimeters():\n",
+        "    # Define the hyperparameter grid for tuning\n",
+        "    # Define the range and step size\n",
+        "    start = 1\n",
+        "    stop = 100\n",
+        "    step = 50\n",
+        "\n",
+        "    # Create the array using numpy's arange function\n",
+        "    arr = np.arange(start, stop + step, step)\n",
+        "    gamma = list(np.logspace(-3, 3, 30))\n",
+        "    param_grid = {\n",
+        "      'C':arr,\n",
+        "      'kernel': ['rbf'],\n",
+        "      'degree': [2],\n",
+        "      'gamma': ['scale', 'auto'] + gamma\n",
+        "      #['scale', 'auto'] +gamma\n",
+        "    }\n",
+        "\n",
+        "    # param_grid = {\n",
+        "    #     'C': [101],\n",
+        "    #     'kernel': ['rbf'],\n",
+        "    #     'degree': [2],\n",
+        "    #     'gamma': [2.976351441631316]\n",
+        "    #     # ['scale', 'auto'] +gamma\n",
+        "    # }\n",
+        "    return param_grid\n",
+        "\n",
+        "\n",
+        "# Create a dataframe with the dependent and independent variables\n",
+        "def print_metrics(y_test, y_pred):\n",
+        "    # Evaluate the model on the test set\n",
+        "    accuracy = accuracy_score(y_test, y_pred)\n",
+        "    precision = precision_score(y_test, y_pred, average='weighted')\n",
+        "    recall = recall_score(y_test, y_pred, average='weighted')\n",
+        "\n",
+        "    print('Accuracy:', accuracy)\n",
+        "    print('Precision:', precision)\n",
+        "    print('Recall:', recall)\n",
+        "    \n",
+        "\n",
         "def rf_train(X_train, X_test, y_train, y_test):\n",
         "    # Define the NB classifier\n",
         "    rf = RandomForestClassifier()\n",
