--- a/src/FE_LS_Seg copy.ipynb
+++ b/src/FE_LS_Seg copy.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
     "    for contour in contours:\n",
     "        curr = []\n",
     "        # Precompute the coordinates of all points in the contour\n",
-    "        x, y = contour[:, 0, 0], contour[:, 0, 1]\n",
+    "        x, y = contour[0][0][0], contour[0][0][1]\n",
     "        # Compute the maximum and minimum x and y coordinates of the contour\n",
     "        min_x, max_x = np.min(x), np.max(x)\n",
     "        min_y, max_y = np.min(y), np.max(y)\n",
@@ -144,6 +144,7 @@
     "                curr_area = get_area_measure(contour,i,radius,thresh)\n",
     "                # curr_arc = get_curvature_arc_length(contour,i,x,y,radius,circle_perimeters)\n",
     "                # curr_int = get_integral_curvature(i,x,y, radius)\n",
+    "                print(curr_area)\n",
     "                curr.append(curr_area) # remove\n",
     "                #curr.append(curr_arc)\n",
     "                #curr.append(curr_int) # add\n",
@@ -155,92 +156,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Jeremy\\AppData\\Local\\Temp\\ipykernel_25236\\2510803721.py:39: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished plant: halesia_tetraptera\n",
-      "Finished plant: ilex_opaca\n",
-      "Finished plant: juglans_cinerea\n",
-      "Finished plant: juglans_nigra\n",
-      "Finished plant: juniperus_virginiana\n",
-      "Finished plant: koelreuteria_paniculata\n",
-      "Finished plant: liquidambar_styraciflua\n",
-      "Finished plant: liriodendron_tulipifera\n",
-      "Finished plant: maclura_pomifera\n",
-      "Finished plant: magnolia_acuminata\n",
-      "Finished plant: magnolia_denudata\n",
-      "Finished plant: magnolia_grandiflora\n",
-      "Finished plant: magnolia_macrophylla\n",
-      "Finished plant: magnolia_soulangiana\n",
-      "Finished plant: magnolia_stellata\n",
-      "Finished plant: magnolia_tripetala\n",
-      "Finished plant: magnolia_virginiana\n",
-      "Finished plant: malus_angustifolia\n",
-      "Finished plant: malus_baccata\n",
-      "Finished plant: malus_coronaria\n",
-      "Finished plant: malus_floribunda\n",
-      "Finished plant: malus_hupehensis\n",
-      "Finished plant: malus_pumila\n",
-      "Finished plant: metasequoia_glyptostroboides\n",
-      "Finished plant: morus_alba\n",
-      "Finished plant: morus_rubra\n",
-      "Finished plant: nyssa_sylvatica\n",
-      "Finished plant: ostrya_virginiana\n",
-      "Finished plant: oxydendrum_arboreum\n",
-      "Finished plant: paulownia_tomentosa\n",
-      "Finished plant: phellodendron_amurense\n",
-      "Finished plant: pinus_bungeana\n",
-      "Finished plant: pinus_cembra\n",
-      "Finished plant: pinus_densiflora\n",
-      "Finished plant: pinus_echinata\n",
-      "Finished plant: pinus_flexilis\n",
-      "Finished plant: pinus_koraiensis\n",
-      "Finished plant: pinus_nigra\n",
-      "Finished plant: pinus_parviflora\n",
-      "Finished plant: pinus_peucea\n",
-      "Finished plant: pinus_pungens\n",
-      "Finished plant: pinus_resinosa\n",
-      "Finished plant: pinus_rigida\n",
-      "Finished plant: pinus_strobus\n",
-      "Finished plant: pinus_sylvestris\n",
-      "Finished plant: pinus_taeda\n",
-      "Finished plant: pinus_thunbergii\n",
-      "Finished plant: pinus_virginiana\n",
-      "Finished plant: pinus_wallichiana\n",
-      "Finished plant: platanus_acerifolia\n",
-      "Finished plant: platanus_occidentalis\n",
-      "Finished plant: populus_deltoides\n",
-      "Finished plant: populus_grandidentata\n",
-      "Finished plant: populus_tremuloides\n",
-      "Finished plant: prunus_pensylvanica\n",
-      "Finished plant: prunus_sargentii\n",
-      "Finished plant: prunus_serotina\n",
-      "Finished plant: prunus_serrulata\n",
-      "Finished plant: prunus_subhirtella\n",
-      "Finished plant: prunus_virginiana\n",
-      "Finished plant: prunus_yedoensis\n",
-      "Finished plant: pseudolarix_amabilis\n",
-      "Finished plant: ptelea_trifoliata\n",
-      "Finished plant: pyrus_calleryana\n",
-      "Finished plant: quercus_acutissima\n",
-      "Finished plant: quercus_alba\n"
+      "[[[123 102]]]\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "invalid index to scalar variable.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15844\\558084937.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     49\u001b[0m         \u001b[0moc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmerged_contours\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 51\u001b[1;33m         \u001b[0mcurrvature_arr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_curvatures\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mradius_arr\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mthresh\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     52\u001b[0m         \u001b[0mcurvature_arr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcurrvature_arr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m         \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcurvature_arr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# x-axis is the number of contour points\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15844\\2097305358.py\u001b[0m in \u001b[0;36mget_curvatures\u001b[1;34m(contours, radius_arr, thresh)\u001b[0m\n\u001b[0;32m     84\u001b[0m         \u001b[0mcurr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     85\u001b[0m         \u001b[1;31m# Precompute the coordinates of all points in the contour\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 86\u001b[1;33m         \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcontour\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcontour\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     87\u001b[0m         \u001b[1;31m# Compute the maximum and minimum x and y coordinates of the contour\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     88\u001b[0m         \u001b[0mmin_x\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_x\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: invalid index to scalar variable."
      ]
     }
    ],
    "source": [
     "# specify path to the folder containing image files\n",
-    "path = \"../../leafsnap/leafsnap-dataset/dataset/segmented/lab_/2\"\n",
+    "path = \"../../leafsnap/leafsnap-dataset/dataset/segmented/field\"\n",
     "# path = \"../../leafsnap/leafsnap-dataset/dataset/segmented/field\"\n",
     "\n",
     "counter = 0\n",
@@ -263,37 +204,47 @@
     "        if not os.path.isfile(filepath):\n",
     "            continue\n",
     "        \n",
-    "        try:\n",
-    "            # # set the new size\n",
-    "            # new_size = (250, 250)\n",
-    "            # resize the image\n",
-    "            img = resizeImage(filepath, 300)\n",
-    "            # Convert the image to grayscale\n",
-    "            gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
-    "            # Threshold the image to get a binary image\n",
-    "            ret, thresh = cv2.threshold(gray, 127, 255, cv2.THRESH_BINARY)\n",
-    "            # Find the contours in the image\n",
-    "            contours, hierarchy = cv2.findContours(thresh, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "            radius_arr = [10,15,20,25,30,35,40,45,50,55,60,65,70,75,80,85,90,95,100,105,110,115,120,125,130]\n",
-    "            ini_curvature_arr = get_curvatures(contours,radius_arr, thresh)\n",
-    "\n",
-    "            curvature_arr = np.array(ini_curvature_arr)\n",
-    "\n",
-    "            x = np.arange(curvature_arr.shape[1]) # x-axis is the number of contour points\n",
-    "            y = np.arange(curvature_arr.shape[0]) # y-axis is the different scales\n",
-    "            X, Y = np.meshgrid(x, y)\n",
-    "\n",
-    "            hist_values = []\n",
-    "            for i in range(curvature_arr.shape[0]):\n",
-    "                counts, bin_edges = np.histogram(curvature_arr[i], bins=21) # adjust the number of bins as needed\n",
-    "                hist_values.append(counts)\n",
-    "\n",
-    "            data = np.array([np.array(hist) for hist in hist_values])\n",
-    "            X2 = data.flatten().tolist()\n",
-    "            features.append(X2)\n",
-    "            labels.append(foldername)\n",
-    "        except:\n",
-    "            pass\n",
+    "        # try:\n",
+    "        # # set the new size\n",
+    "        # new_size = (250, 250)\n",
+    "        # resize the image\n",
+    "        radius_arr = np.arange(10, 131, 5)\n",
+    "         # Load the image\n",
+    "        img = cv2.imread(filepath)\n",
+    "        # set the new size\n",
+    "        new_size = (250, 250)\n",
+    "        # resize the image\n",
+    "        img = cv2.resize(img, new_size)\n",
+    "        # Convert the image to grayscale\n",
+    "        gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "        ret, thresh = cv2.threshold(gray, 127, 255, cv2.THRESH_BINARY)\n",
+    "        # Apply a Gaussian blur to the image to reduce noise\n",
+    "        blur = cv2.GaussianBlur(gray, (5,5), 0)\n",
+    "        # Apply Canny edge detection to get the edges\n",
+    "        edges = cv2.Canny(blur, 100, 200)\n",
+    "        # Find the contours in the image\n",
+    "        contours, hierarchy = cv2.findContours(edges, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "        # Merge all the contours\n",
+    "        merged_contours = []\n",
+    "        for contour in contours:\n",
+    "            merged_contours += contour.tolist()\n",
+    "        oc = np.array([(merged_contours)])\n",
+    "        print(oc)\n",
+    "        currvature_arr = get_curvatures(oc,radius_arr,thresh)\n",
+    "        curvature_arr = np.array(currvature_arr)\n",
+    "        x = np.arange(curvature_arr.shape[1]) # x-axis is the number of contour points\n",
+    "        y = np.arange(curvature_arr.shape[0]) # y-axis is the different scales\n",
+    "        X, Y = np.meshgrid(x, y)\n",
+    "        hist_values = []\n",
+    "        for i in range(curvature_arr.shape[0]):\n",
+    "            counts, bin_edges = np.histogram(curvature_arr[i], bins=21) # adjust the number of bins as needed\n",
+    "            hist_values.append(counts)\n",
+    "        data = np.array([np.array(hist) for hist in hist_values])\n",
+    "        X2 = data.flatten().tolist()\n",
+    "        features.append(X2)\n",
+    "        labels.append(foldername)\n",
+    "        # except:\n",
+    "        #     pass\n",
     "\n",
     "    print(f\"Finished plant: {foldername}\")\n",
     "    \n",
