udpated to k=10 results

--- a/src/final_training copy.ipynb
+++ b/src/final_training copy.ipynb
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,12 +501,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize the nearest neighbors model\n",
-    "nn_model_2 = NearestNeighbors(n_neighbors=20, algorithm='brute', metric='cosine')\n",
+    "nn_model_2 = NearestNeighbors(n_neighbors=10, algorithm='brute', metric='cosine')\n",
     "\n",
     "# Loop through each field image and evaluate recognition performance\n",
     "species_match_ranks_2 = []\n",
@@ -527,6 +527,7 @@
     "    correct_species = labels_2[i]\n",
     "    species_neighbors = labels_2[indices.flatten()]\n",
     "\n",
+    "    correct_species_rank = 0\n",
     "    if (len(np.where(species_neighbors == correct_species)[0])) != 0:\n",
     "        correct_species_rank = np.where(species_neighbors == correct_species)[0][0] + 1  # add 1 to convert to rank\n",
     "\n",
@@ -535,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,31 +549,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.1805901173124778,\n",
-       " 0.263597582651973,\n",
-       " 0.35549235691432635,\n",
-       " 0.41148240312833273,\n",
-       " 0.4569854248133665,\n",
-       " 0.4976892996800569,\n",
-       " 0.545680767863491,\n",
-       " 0.5998933522929257,\n",
-       " 0.6436189121933878,\n",
-       " 0.6813011020263064,\n",
-       " 0.7204052612868823,\n",
-       " 0.7587984358336296,\n",
-       " 0.7877710629221472,\n",
-       " 0.8355847849271241,\n",
-       " 0.865979381443299,\n",
-       " 0.9006398862424458,\n",
-       " 0.9212584429434767,\n",
-       " 0.9560966939210807,\n",
-       " 0.9774262353359403,\n",
+       "[0.7595094205474582,\n",
+       " 0.8103448275862069,\n",
+       " 0.8546036260220405,\n",
+       " 0.880199075719872,\n",
+       " 0.903128332740846,\n",
+       " 0.9232136509065055,\n",
+       " 0.9441876999644507,\n",
+       " 0.9637397795947387,\n",
+       " 0.9838250977603982,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
        " 1.0,\n",
        " 1.0,\n",
        " 1.0,\n",
@@ -581,7 +582,7 @@
        " 1.0]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
