--- a/src/final_training copy.ipynb
+++ b/src/final_training copy.ipynb
@@ -491,7 +491,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>NearestNeighbors(algorithm=&#x27;brute&#x27;, metric=&#x27;cosine&#x27;, n_neighbors=10)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">NearestNeighbors</label><div class=\"sk-toggleable__content\"><pre>NearestNeighbors(algorithm=&#x27;brute&#x27;, metric=&#x27;cosine&#x27;, n_neighbors=10)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "NearestNeighbors(algorithm='brute', metric='cosine', n_neighbors=10)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "import numpy as np\n",
+    "\n",
+    "# # Load the features extracted from the database of lab and field images\n",
+    "# database_features = np.load(\"path/to/database_features.npy\")\n",
+    "\n",
+    "# Create a nearest neighbors object with n_neighbors set to 25\n",
+    "nbrs = NearestNeighbors(n_neighbors=10, algorithm='brute', metric='cosine').fit(field_features_2)\n",
+    "nbrs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "525\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_hist = np.array([21.0, 59.0, 46.0, 51.0, 25.0, 32.0, 32.0, 24.0, 3.0, 0.0, 1.0, 1.0, 0.0, 0.0, 0.0, 4.0, 1.0, 0.0, 0.0, 0.0, 0.0, 22.0, 41.0, 53.0, 41.0, 39.0, 30.0, 33.0, 9.0, 8.0, 5.0, 0.0, 1.0, 4.0, 5.0, 3.0, 2.0, 1.0, 1.0, 0.0, 2.0, 0.0, 18.0, 41.0, 52.0, 43.0, 31.0, 27.0, 14.0, 14.0, 9.0, 10.0, 3.0, 8.0, 5.0, 5.0, 4.0, 4.0, 5.0, 1.0, 3.0, 1.0, 2.0, 12.0, 55.0, 55.0, 38.0, 35.0, 30.0, 15.0, 4.0, 5.0, 9.0, 6.0, 4.0, 5.0, 5.0, 6.0, 3.0, 7.0, 2.0, 0.0, 1.0, 3.0, 106.0, 76.0, 36.0, 18.0, 17.0, 10.0, 10.0, 17.0, 3.0, 0.0, 2.0, 2.0, 0.0, 1.0, 0.0, 1.0, 1.0, 0.0, 0.0, 0.0, 0.0, 74.0, 63.0, 50.0, 30.0, 11.0, 14.0, 11.0, 14.0, 11.0, 14.0, 3.0, 0.0, 1.0, 1.0, 1.0, 0.0, 1.0, 1.0, 0.0, 0.0, 0.0, 89.0, 64.0, 60.0, 6.0, 8.0, 7.0, 11.0, 16.0, 14.0, 8.0, 3.0, 0.0, 3.0, 2.0, 2.0, 0.0, 2.0, 2.0, 2.0, 1.0, 0.0, 65.0, 97.0, 45.0, 8.0, 10.0, 12.0, 10.0, 13.0, 6.0, 7.0, 7.0, 8.0, 4.0, 2.0, 3.0, 2.0, 1.0, 0.0, 0.0, 0.0, 0.0, 75.0, 69.0, 39.0, 22.0, 18.0, 17.0, 12.0, 14.0, 10.0, 8.0, 9.0, 0.0, 6.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 86.0, 49.0, 26.0, 26.0, 11.0, 7.0, 7.0, 14.0, 13.0, 10.0, 10.0, 14.0, 10.0, 4.0, 2.0, 4.0, 2.0, 3.0, 1.0, 1.0, 0.0, 60.0, 50.0, 43.0, 16.0, 6.0, 11.0, 9.0, 14.0, 14.0, 8.0, 13.0, 14.0, 19.0, 8.0, 6.0, 5.0, 1.0, 0.0, 2.0, 1.0, 0.0, 45.0, 46.0, 40.0, 21.0, 16.0, 9.0, 13.0, 18.0, 12.0, 12.0, 15.0, 15.0, 4.0, 12.0, 11.0, 9.0, 2.0, 0.0, 0.0, 0.0, 0.0, 28.0, 58.0, 40.0, 9.0, 15.0, 22.0, 22.0, 5.0, 11.0, 21.0, 17.0, 10.0, 8.0, 9.0, 10.0, 5.0, 4.0, 5.0, 1.0, 0.0, 0.0, 18.0, 54.0, 32.0, 18.0, 19.0, 33.0, 7.0, 13.0, 13.0, 5.0, 11.0, 12.0, 14.0, 10.0, 7.0, 8.0, 5.0, 8.0, 6.0, 7.0, 0.0, 16.0, 52.0, 23.0, 18.0, 35.0, 21.0, 16.0, 7.0, 13.0, 17.0, 16.0, 16.0, 13.0, 9.0, 5.0, 10.0, 5.0, 3.0, 2.0, 2.0, 1.0, 18.0, 28.0, 30.0, 24.0, 35.0, 28.0, 32.0, 17.0, 10.0, 10.0, 18.0, 7.0, 9.0, 3.0, 11.0, 8.0, 6.0, 3.0, 2.0, 1.0, 0.0, 8.0, 13.0, 32.0, 23.0, 31.0, 31.0, 23.0, 25.0, 29.0, 19.0, 15.0, 10.0, 4.0, 11.0, 7.0, 9.0, 5.0, 3.0, 2.0, 0.0, 0.0, 1.0, 13.0, 26.0, 15.0, 33.0, 39.0, 33.0, 45.0, 35.0, 10.0, 13.0, 11.0, 4.0, 4.0, 5.0, 7.0, 2.0, 2.0, 2.0, 0.0, 0.0, 0.0, 3.0, 9.0, 15.0, 36.0, 44.0, 34.0, 43.0, 51.0, 17.0, 11.0, 8.0, 6.0, 4.0, 3.0, 8.0, 3.0, 5.0, 0.0, 0.0, 0.0, 0.0, 0.0, 3.0, 15.0, 33.0, 46.0, 39.0, 53.0, 67.0, 15.0, 5.0, 8.0, 0.0, 3.0, 1.0, 2.0, 4.0, 4.0, 0.0, 2.0, 0.0, 0.0, 0.0, 0.0, 9.0, 12.0, 49.0, 23.0, 30.0, 113.0, 32.0, 14.0, 7.0, 1.0, 0.0, 1.0, 2.0, 4.0, 1.0, 2.0, 0.0, 0.0, 0.0, 0.0, 0.0, 11.0, 11.0, 48.0, 14.0, 22.0, 160.0, 16.0, 9.0, 2.0, 1.0, 1.0, 0.0, 0.0, 1.0, 1.0, 0.0, 1.0, 2.0, 0.0, 0.0, 0.0, 0.0, 0.0, 5.0, 5.0, 1.0, 12.0, 28.0, 17.0, 6.0, 13.0, 15.0, 34.0, 150.0, 7.0, 5.0, 2.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, 2.0, 0.0, 2.0, 17.0, 25.0, 3.0, 3.0, 9.0, 8.0, 6.0, 211.0, 8.0, 3.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 13.0, 16.0, 3.0, 2.0, 5.0, 6.0, 2.0, 23.0, 225.0, 2.0, 3.0])\n",
+    "print(len(input_hist))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the HoCS feature vector extracted from the input image as the query\n",
+    "query = input_hist.reshape(1, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform the nearest neighbors search\n",
+    "distances, indices = nbrs.kneighbors(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match 0 Species: acer_palmatum Distance: 2.220446049250313e-16\n",
+      "Match 1 Species: liquidambar_styraciflua Distance: 0.2916945413297565\n",
+      "Match 2 Species: evodia_daniellii Distance: 0.2919689843028105\n",
+      "Match 3 Species: maclura_pomifera Distance: 0.29213078010631865\n",
+      "Match 4 Species: evodia_daniellii Distance: 0.3043575250640178\n",
+      "Match 5 Species: aesculus_pavi Distance: 0.31511037953539756\n",
+      "Match 6 Species: acer_palmatum Distance: 0.3165686696641592\n",
+      "Match 7 Species: prunus_sargentii Distance: 0.317419094761631\n",
+      "Match 8 Species: quercus_muehlenbergii Distance: 0.317419094761631\n",
+      "Match 9 Species: prunus_sargentii Distance: 0.317419094761631\n"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from PIL import Image\n",
+    "\n",
+    "# Show the top 25 matches to the user\n",
+    "for i in range(len(indices[0])):\n",
+    "    index = indices[0][i]\n",
+    "    distance = distances[0][i]\n",
+    "    species = labels_2[index]\n",
+    "    # image_path = \"../../leafsnap/leafsnap-dataset/dataset/1img_compiled/\" + str(index) + \".jpg\" # Assuming the images are named as their corresponding index in the database\n",
+    "\n",
+    "    # # Load and show the matched image\n",
+    "    # img = Image.open(image_path)\n",
+    "    # plt.imshow(img)\n",
+    "    # plt.show()\n",
+    "\n",
+    "    # Print the match information\n",
+    "\n",
+    "    print(f\"Match {i} Species: {field_copy['plant'][index]} Distance: {distance}\")\n",
+    "# Assuming that you have already loaded the database of features and the list of species labels\n",
+    "# as numpy arrays called database_features and species_labels, respectively"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
