--- a/src/curvature-fe.ipynb
+++ b/src/curvature-fe.ipynb
@@ -41,9 +41,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
-        "id": "xWgfXorDSjMg"
+        "id": "g_yCbh2eSkDT"
       },
       "outputs": [],
       "source": [
@@ -59,17 +59,56 @@
         "    if num > 0:\n",
         "        count += 1\n",
         "\n",
-        "  print(\"Number of positive elements in the array:\", count)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "id": "g_yCbh2eSkDT"
-      },
-      "outputs": [],
-      "source": [
+        "  print(\"Number of positive elements in the array:\", count)\n",
+        "\n",
+        "\n",
+        "def resizeImage(img_path, new_width):\n",
+        "    # Load the image\n",
+        "    img = cv2.imread(img_path)\n",
+        "    # Get the image dimensions\n",
+        "    height, width = img.shape[:2]\n",
+        "    # Calculate the aspect ratio\n",
+        "    ratio = float(new_width) / width\n",
+        "    # Calculate the new height\n",
+        "    new_height = int(height * ratio)\n",
+        "    # Resize the image\n",
+        "    resized_img = cv2.resize(img, (new_width, new_height),\n",
+        "                             interpolation=cv2.INTER_AREA)\n",
+        "    return resized_img\n",
+        "\n",
+        "\n",
+        "def to_curv_image(currvature_arr, i, y):\n",
+        "    # Define image size and resolution\n",
+        "    img_width = 250\n",
+        "    img_height = 250\n",
+        "\n",
+        "    # Create blank image\n",
+        "    curvature_img = np.zeros((img_height, img_width), np.uint8)\n",
+        "\n",
+        "    # Define curvature array (example values)\n",
+        "    curvature_data = currvature_arr[i][y]\n",
+        "\n",
+        "    # Map curvature values to pixel intensities\n",
+        "    max_curvature = np.max(np.abs(curvature_data))\n",
+        "    curvature_img = (np.abs(curvature_data) / max_curvature) * 255\n",
+        "\n",
+        "    # Apply smoothing (optional)\n",
+        "\n",
+        "    curvature_img = cv2.GaussianBlur(curvature_img, (5, 5), 0)\n",
+        "    return curvature_img\n",
+        "\n",
+        "\n",
+        "def to_hist(curvature_img):\n",
+        "    # Define histogram parameters\n",
+        "    hist_size = 21  # number of bins\n",
+        "    hist_range = (0, 256)  # range of values to use for the histogram\n",
+        "    curvature_img = np.uint8(curvature_img)\n",
+        "    # Calculate histogram\n",
+        "    histogram = cv2.calcHist([curvature_img], [0], None, [\n",
+        "                             hist_size], hist_range)\n",
+        "    return histogram\n",
+        "\n",
+        "\n",
         "def curvature(x, y, xc, yc, r):\n",
         "    # Shift coordinates to make the center of the circle the origin\n",
         "    x_shifted = x - xc\n",
@@ -170,61 +209,6 @@
         "        curvature_arr.append(curr_2)\n",
         "\n",
         "    return curvature_arr\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "id": "-yT2GQaoRZ8c"
-      },
-      "outputs": [],
-      "source": [
-        "def resizeImage(img_path, new_width):\n",
-        "    # Load the image\n",
-        "    img = cv2.imread(img_path)\n",
-        "    # Get the image dimensions\n",
-        "    height, width = img.shape[:2]\n",
-        "    # Calculate the aspect ratio\n",
-        "    ratio = float(new_width) / width\n",
-        "    # Calculate the new height\n",
-        "    new_height = int(height * ratio)\n",
-        "    # Resize the image\n",
-        "    resized_img = cv2.resize(img, (new_width, new_height),\n",
-        "                             interpolation=cv2.INTER_AREA)\n",
-        "    return resized_img\n",
-        "\n",
-        "\n",
-        "def to_curv_image(currvature_arr, i, y):\n",
-        "    # Define image size and resolution\n",
-        "    img_width = 250\n",
-        "    img_height = 250\n",
-        "\n",
-        "    # Create blank image\n",
-        "    curvature_img = np.zeros((img_height, img_width), np.uint8)\n",
-        "\n",
-        "    # Define curvature array (example values)\n",
-        "    curvature_data = currvature_arr[i][y]\n",
-        "\n",
-        "    # Map curvature values to pixel intensities\n",
-        "    max_curvature = np.max(np.abs(curvature_data))\n",
-        "    curvature_img = (np.abs(curvature_data) / max_curvature) * 255\n",
-        "\n",
-        "    # Apply smoothing (optional)\n",
-        "\n",
-        "    curvature_img = cv2.GaussianBlur(curvature_img, (5, 5), 0)\n",
-        "    return curvature_img\n",
-        "\n",
-        "\n",
-        "def to_hist(curvature_img):\n",
-        "    # Define histogram parameters\n",
-        "    hist_size = 21  # number of bins\n",
-        "    hist_range = (0, 256)  # range of values to use for the histogram\n",
-        "    curvature_img = np.uint8(curvature_img)\n",
-        "    # Calculate histogram\n",
-        "    histogram = cv2.calcHist([curvature_img], [0], None, [\n",
-        "                             hist_size], hist_range)\n",
-        "    return histogram\n"
       ]
     },
     {
