Modified Feature Extraction and Done with pcv integration

--- a/src/curvature-fe.ipynb
+++ b/src/curvature-fe.ipynb
@@ -145,7 +145,7 @@
         "    int_curv = integral_curvature(x, y, x[i], y[i], r)[-1]\n",
         "    # Memoize the result\n",
         "    memo[(i, r)] = int_curv\n",
-        "    return int_curv\n",
+        "    return abs(int_curv)\n",
         "\n",
         "\n",
         "def get_area_measure(contour, i, radius, thresh, prev_center, prev_mask):\n",
@@ -1199,49 +1199,50 @@
         "            ret, thresh = cv2.threshold(gray, 127, 255, cv2.THRESH_BINARY)\n",
         "\n",
         "            # Find the contours in the image\n",
-        "            contour, hierarchy = cv2.findContours(\n",
-        "                thresh,  cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
-        "            # Combine the contours\n",
-        "            contours = np.array(contour)\n",
-        "            combined_contour = np.concatenate(contours)\n",
+        "            contour, hierarchy = cv2.findContours(thresh,  cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
         "\n",
-        "            # Compute centroids of contours\n",
-        "            centroids = []\n",
-        "            for c in contours:\n",
-        "                M = cv2.moments(c)\n",
-        "                if M['m00'] != 0:\n",
-        "                    cx = int(M['m10'] / M['m00'])\n",
-        "                    cy = int(M['m01'] / M['m00'])\n",
-        "                    centroids.append((cx, cy))\n",
+        "            \n",
+        "            # # Combine the contours\n",
+        "            # contours = np.array(contour)\n",
+        "            # combined_contour = np.concatenate(contours)\n",
         "\n",
-        "            # Compute distance matrix between centroids\n",
-        "            distances = np.zeros((len(centroids), len(centroids)))\n",
-        "            for i, j in itertools.combinations(range(len(centroids)), 2):\n",
-        "                dist = cv2.norm(np.array(centroids[i]), np.array(centroids[j]))\n",
-        "                distances[i, j] = dist\n",
-        "                distances[j, i] = dist\n",
+        "            # # Compute centroids of contours\n",
+        "            # centroids = []\n",
+        "            # for c in contours:\n",
+        "            #     M = cv2.moments(c)\n",
+        "            #     if M['m00'] != 0:\n",
+        "            #         cx = int(M['m10'] / M['m00'])\n",
+        "            #         cy = int(M['m01'] / M['m00'])\n",
+        "            #         centroids.append((cx, cy))\n",
         "\n",
-        "            # Find minimum spanning tree\n",
-        "            parent = [0]\n",
-        "            visited = [False] * len(centroids)\n",
-        "            visited[0] = True\n",
-        "            while len(parent) < len(centroids):\n",
-        "                min_dist = np.inf\n",
-        "                next_node = None\n",
-        "                for i in parent:\n",
-        "                    for j in range(len(centroids)):\n",
-        "                        if not visited[j] and distances[i, j] < min_dist:\n",
-        "                            min_dist = distances[i, j]\n",
-        "                            next_node = j\n",
-        "                parent.append(next_node)\n",
-        "                visited[next_node] = True\n",
+        "            # # Compute distance matrix between centroids\n",
+        "            # distances = np.zeros((len(centroids), len(centroids)))\n",
+        "            # for i, j in itertools.combinations(range(len(centroids)), 2):\n",
+        "            #     dist = cv2.norm(np.array(centroids[i]), np.array(centroids[j]))\n",
+        "            #     distances[i, j] = dist\n",
+        "            #     distances[j, i] = dist\n",
         "\n",
-        "            # Reorder contours based on minimum spanning tree\n",
-        "            new_contours = [contours[i] for i in parent]\n",
+        "            # # Find minimum spanning tree\n",
+        "            # parent = [0]\n",
+        "            # visited = [False] * len(centroids)\n",
+        "            # visited[0] = True\n",
+        "            # while len(parent) < len(centroids):\n",
+        "            #     min_dist = np.inf\n",
+        "            #     next_node = None\n",
+        "            #     for i in parent:\n",
+        "            #         for j in range(len(centroids)):\n",
+        "            #             if not visited[j] and distances[i, j] < min_dist:\n",
+        "            #                 min_dist = distances[i, j]\n",
+        "            #                 next_node = j\n",
+        "            #     parent.append(next_node)\n",
+        "            #     visited[next_node] = True\n",
+        "\n",
+        "            # # Reorder contours based on minimum spanning tree\n",
+        "            # new_contours = [contours[i] for i in parent]\n",
         "\n",
         "            start_time = time.time()\n",
         "\n",
-        "            currvature_arr = get_curvatures(new_contours, radius_arr, thresh)\n",
+        "            currvature_arr = get_curvatures(contour, radius_arr, thresh)\n",
         "            int_hist = []\n",
         "            area_hist = []\n",
         "\n",
