Push for reference

--- a/src/nn-training-1 copy 2.ipynb
+++ b/src/nn-training-1 copy 2.ipynb
@@ -1145,6 +1145,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.4121247113163972,\n",
+       " 0.5549653579676674,\n",
+       " 0.6536951501154734,\n",
+       " 0.726905311778291,\n",
+       " 0.785796766743649,\n",
+       " 0.8424942263279446,\n",
+       " 0.8862586605080831,\n",
+       " 0.9285219399538106,\n",
+       " 0.9640877598152425,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recognition_rates"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 118,
    "metadata": {},
    "outputs": [],
