--- a/src/nn-training-1 copy.ipynb
+++ b/src/nn-training-1 copy.ipynb
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,9 +1096,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recognition Rate (Rank 1): 33.66%\n",
+      "Recognition Rate (Rank 2): 47.37%\n",
+      "Recognition Rate (Rank 3): 58.08%\n",
+      "Recognition Rate (Rank 4): 66.28%\n",
+      "Recognition Rate (Rank 5): 73.29%\n",
+      "Recognition Rate (Rank 6): 79.65%\n",
+      "Recognition Rate (Rank 7): 85.33%\n",
+      "Recognition Rate (Rank 8): 91.02%\n",
+      "Recognition Rate (Rank 9): 95.63%\n",
+      "Recognition Rate (Rank 10): 100.00%\n",
+      "Recognition Rate (Rank 11): 100.00%\n",
+      "Recognition Rate (Rank 12): 100.00%\n",
+      "Recognition Rate (Rank 13): 100.00%\n",
+      "Recognition Rate (Rank 14): 100.00%\n",
+      "Recognition Rate (Rank 15): 100.00%\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the recognition rate for each rank\n",
     "recognition_rates = []\n",
