--- a/src/plant-cv-source-all.ipynb
+++ b/src/plant-cv-source-all.ipynb
@@ -158,7 +158,8 @@
     "            curr_area_arr = []\n",
     "            curr_int_arr = []\n",
     "            for i in range(len(contour)):\n",
-    "                curr_area = [0]\n",
+    "                curr_area = get_area_measure(\n",
+    "                    contour, i, radius, thresh, prev_center, prev_mask)\n",
     "                curr_int = get_integral_curvature(i, x, y, radius, memo)\n",
     "                curr_int_arr.append(curr_int)\n",
     "                curr_area_arr.append(curr_area)\n",
